changement noms, noms variables

--- a/CamReg_correction/.project
+++ b/CamReg_correction/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TP4_CamReg_correction</name>
+	<name>Projet_robotique_311390_316368</name>
 	<comment></comment>
 	<projects>
 	</projects>
